namespace ProtectTheCastle.Shared
{
    public static class Constants
    {
        public const string VIRTUAL_CAMERA_TAG = "Virtual Camera";
        public const string NAVIGATION_POINT_TAG = "Navigation Point";
        public const string HEALTH_BAR_CANVAS_NAME = "Health Bar Canvas";
        public const string HEALTH_BAR_NAME = "HealthBar";
        
        public static class Player1
        {
            public const string TAG = "Player";
            public const string CASTLE_TAG = "Player Castle";
            public const string TOWER_TAG = "Player Tower";
        }

        public static class Player2
        {
            public const string TAG = "Enemy";
            public const string CASTLE_TAG = "Enemy Castle";
            public const string TOWER_TAG = "Enemy Tower";
        }

        public static class Animations
        {
            public const string SPEED_NAME = "Speed";
            public const string ATTACK_NAME = "Attack";
            public const string GET_HIT_NAME = "GetHit";
            public const string DIE_NAME = "Die";
            public const string VICTORY_NAME = "Victory";
        }
    }
}
